Fix issues on mobile on main page

--- a/styles.css
+++ b/styles.css
@@ -78,9 +78,14 @@ header h1 {
     background-color: #333;
 }
 
+.portfolio-item {
+    display: flex;
+    justify-content: center;
+}
 .portfolio-item img {
-    max-width: 25em;
+    max-width: 90%;
     transition: transform 0.75s ease;
+
 }
 .portfolio-item img:hover {
     transform: scale(1.2);
@@ -88,9 +93,7 @@ header h1 {
 .container {
     display: flex;
     justify-content: center;
-    margin-left: 2vw;
 }
-
 .about-me {
     padding-bottom: 2.5%;
     padding-top: 0.75%;
@@ -193,5 +196,8 @@ header h1 {
     }
     .navbar-right li {
         display: block;
+    }
+    .portfolio-item img {
+        max-width: 25em;
     }
 }
